--- a/app/src/main/res/layout/activity_calculate.xml
+++ b/app/src/main/res/layout/activity_calculate.xml
@@ -122,7 +122,7 @@
                 android:layout_weight="1"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/black"
-                android:textSize="24dp"/>
+                android:textSize="24sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -133,7 +133,7 @@
                 android:layout_weight="1"
                 android:text="xxxx mg"
                 android:textColor="@color/black"
-                android:textSize="24dp" />
+                android:textSize="24sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -147,7 +147,7 @@
                 android:layout_weight="1"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/black"
-                android:textSize="24dp"/>
+                android:textSize="24sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -158,7 +158,7 @@
                 android:layout_weight="1"
                 android:text="xxxx mg"
                 android:textColor="@color/black"
-                android:textSize="24dp" />
+                android:textSize="24sp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -171,7 +171,7 @@
                 android:layout_weight="1"
                 android:fontFamily="sans-serif"
                 android:textColor="@color/black"
-                android:textSize="24dp"/>
+                android:textSize="24sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -182,7 +182,7 @@
                 android:layout_weight="1"
                 android:text="xxxx mg"
                 android:textColor="@color/black"
-                android:textSize="24dp" />
+                android:textSize="24sp" />
         </LinearLayout>
 
     </LinearLayout>
